# rsbot

./: Cargo.toml  README.md  bot.py  instructions.py  mkscript.py  mouse.py  requirements.txt  rsbot.py  setup.py  shell.nix  vm.py
bot_scripts/: cooking.json  crafting.json  firemaking.json  fletching.json  herblore.json  prayer.json
rsbot/: bot.py  mouse.py
scripts/: construction.rsbot  crafting.json  firemaking.json  fletching.csv  fletching.json  fletching.rsbot  ivy_wc.json  login.json  logout.json  mahogany_wc.json  mkscript.py  smithing.json
src/: instructions.py  lib.rs  main.rs  vm.py
tests/: test_bot.py  test_mouse.py
tools/: pixel_observer.py
