[package]
name = "rsbot"
version = "0.1.0"
edition = "2021"
description = "A RuneScape Macroing Tool"
license = "Unlicense"

[dependencies]
anyhow = "1.0"
clap = {version = "4.5", features = ["derive"]}
device_query = "4.0"
kurbo = "0.13"
log = "0.4"
rand = "0.10"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
simplelog = "0.12"
